workloads/istio-system/0-istio-system.ns.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: istio-system
  labels:
    app.kubernetes.io/name: istio
    istio-injection: disabled
