workloads/istio-system/0-namespace.yaml
---

apiVersion: v1
kind: Namespace

metadata:
  name: istio-system
  labels:
    istio-injection: disabled
