workloads/istio-system/ingress-nodeports.svc.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: ingress-nodeports
  namespace: istio-system

spec:
  type: NodePort
  selector:
    istio: ingressgateway
  ports:
    - name: frps
      protocol: TCP
      port: 30070
      targetPort: 30070
      nodePort: 30070
    - name: ssh
      protocol: TCP
      port: 30022
      targetPort: 30022
      nodePort: 30022
