workloads/istio-system/cluster.gw.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: cluster
  namespace: istio-system

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts: ["*.svc.cluster.local"]
