workloads/istio-system/sandboxapi-ca.gw.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: sandboxapi-ca
  namespace: istio-system

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: sandboxapi-ca-tls
      hosts: &hosts
        - sandboxapi.ca
        - "*.sandboxapi.ca"
    - port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts: *hosts
