workloads/istio-system/stevenxie-com.gw.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: stevenxie-com
  namespace: istio-system

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: stevenxie-com-tls
      hosts: &hosts
        - stevenxie.com
        - "*.stevenxie.com"
    - port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts: *hosts
