workloads/istio-system/uwcoffeencode-com.gw.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: uwcoffeencode-com
  namespace: istio-system

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: uwcoffeencode-com-tls
      hosts: &hosts
        - uwcoffeencode.com
        - "*.uwcoffeencode.com"
    - port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts: *hosts
