workloads/istio-system/wanderfall.gw.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: wanderfall
  namespace: istio-system

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: wanderfallgames-com-tls
      hosts: &hosts
        - wanderfallgames.com
        - www.wanderfallgames.com
    - port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts: *hosts
